Fixed toolbar on mobile.

--- a/Js/Core/Ui/Components/Draft/styles.scss
+++ b/Js/Core/Ui/Components/Draft/styles.scss
@@ -75,6 +75,13 @@
           /* sven: causes problems when the toolbar goes into 2 lines */
           vertical-align: top;
 
+          actions{
+            display: table;
+            >span{
+              display: table-cell;
+            }
+          }
+
           .toolbar-dropdown {
             margin-right: 0px;
             button {
